test/programs/valid/modifiers/restricted_static_native_int_m_int.java
  protected class A {
    public A() {}
    public static native int m(int i);
  }

