test/programs/invalid/_custom/interface_bad_mods.java
protected interface InterfaceBadMods {
    public native void m();
}
